--- a/css/responsive.css
+++ b/css/responsive.css
@@ -28,7 +28,7 @@
 	font-size:10px;
 }
 .price_content a{
-	margin-left:7rem;
+	margin-left:3rem;
 }
 .order_1{
 	order:1;
@@ -36,16 +36,28 @@
 .order_2{
 	order:2;
 }
+.get_btn{
+	margin-left:10px;
+}
 .ban_cnt{
 	text-align:center;
 	font-size:37px;
+	margin-top: 3rem;
 }
 .ban_cnt p{
-	font-size:2rem; 
+	font-size:1rem; 
+ margin-top:1rem;
 }
 .ban_cnt a{
 	text-align:center;
-   font-size:2.2rem;
+   font-size:1.2rem;
+   width:10rem;
+   margin-left:-2rem;
+   margin-top:3rem;
+}
+.ban_cnt h1{
+	font-size:22px;
+	margin-top:0rem;
 }
 .box5{
 	text-align:center;
@@ -60,6 +72,9 @@
 }
 .ban4 p{
 	margin-left:30%;
+}
+.ban4{
+	height:31vh;
 }
 .card{
 	width:90%;
@@ -112,11 +127,11 @@
         padding:0 15px;
     }
     .ban_cnt p {
-    font-size: 41px;
+    font-size: 20px;
 }
 	.ban_cnt{
 	text-align:center;
-	font-size:40px;
+	font-size:30px;
 }
 	.ban_cnt i{
 	text-align:center;
@@ -128,9 +143,7 @@
 	color:#e03a3c;
 	display:flex;
 	font-size: 32px;
-}
-.price_content a{
-	margin-left:7rem;
+
 }
 .con_box4{
 	margin-top:40px;
@@ -148,7 +161,7 @@
 	width:15%;
 }
 .price_content a{
-	margin-left:7rem;
+	margin-left:4rem;
 }
 .last_cnt4 a{
 	margin-left:8rem;
